<resources>
    <string name="app_name">International Bicycle Race</string>

    <string name="app_id">727450297375918</string>
    <string name="action_settings">settings</string>
    <string name="succeeded_facebook_login">succeeded in facebook login!</string>
    <string name="try_after_gps_catched">Try again after GPS is catched</string>
    <string name="wanna_exit">Wanna exit app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="start">START</string>
    <string name="rank">RANK</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="wanna_use_location_service">Wanna use location service?</string>
    <string name="confirm">OK</string>
    <string name="rank_refresh_interval">Rank Refresh Interval</string>
    <string name="choose_rank_refresh_interval">Choose Rank Refresh Interval</string>
    <string name="interval">Interval</string>
    <string name="donation">Donation</string>
    <string name="help_developer">Please Help developer</string>
    <string name="vitamin">Vitamin</string>
    <string name="I_will_make_better_app">I will make good apps!</string>
    <string name="updating_rank">Updating rank...</string>
    <string name="categoryFacebookProfile">Facebook Profile</string>
    <string name="facebookProfile">Facebook Profile</string>
    <string name="openFacebookProfile">Open my Facebook Profile</string>

    <string-array name="refreshInterval">
        <item>1sec</item>
        <item>5sec</item>
        <item>10sec</item>
        <item>30sec</item>
    </string-array>
    <string-array name="refreshIntervalValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
